--- a/src/components/Article/index.module.scss
+++ b/src/components/Article/index.module.scss
@@ -11,7 +11,7 @@
   height: 500px;
   margin: auto;
   -webkit-box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 2px 20px 2px rgb(0 0 0 / 10%);
+  box-shadow: 0 2px 20px 2px rgba(0, 0, 0, 0.1);
   &:hover {
     transform: scale(1.01);
   }
