--- a/src/components/Nav/index.module.scss
+++ b/src/components/Nav/index.module.scss
@@ -15,7 +15,7 @@
   right: 0;
   z-index: 1000;
   background-color: #fff;
-  box-shadow: rgb(0 0 0 / 10%) 0px 3px 5px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 3px 5px;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
